--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,8 @@
   },
   "author": "Nick Rabone",
   "license": "MIT",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^4.21.2"
+  }
 }
