--- a/app/package.json
+++ b/app/package.json
@@ -7,5 +7,16 @@
   },
   "author": "Nick Rabone",
   "license": "MIT",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "config": "^3.3.12",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.19.2",
+    "express-validator": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
+    "sqlite3": "^5.1.7"
+  }
 }
