--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,13 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "cross-env": "^7.0.3",
-    "lorem-ipsum": "^2.0.8"
+    "eslint": "^9.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.6.0",
+    "lorem-ipsum": "^2.0.8",
+    "prettier": "^3.3.2"
   }
 }
