Included type: module to package.json

--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "edubba-app",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "node --watch index.js",
     "lint": "eslint ."
